Completed tasks number 5

--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "@hexlet/code",
   "version": "1.0.0",
   "description": "[![Actions Status](https://github.com/Douglas-san-anton/Proyecto-project-98/actions/workflows/hexlet-check.yml/badge.svg)](https://github.com/Douglas-san-anton/Proyecto-project-98/actions)",
-  "main": "index.js",
+  "main": "bin/brain-games.js",
   "type": "module",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -10,9 +10,17 @@
   "author": "douglas",
   "license": "ISC",
   "bin": {
-    "brain-games": "bin/brain-games.js"
+    "brain-games": "bin/brain-games.js",
+    "brain-even": "bin/brain-even.js"
   },
   "dependencies": {
-    "link": "^2.1.0"
+    "link": "^2.1.0",
+    "make": "^0.8.1",
+    "readline-sync": "^1.4.10"
+  },
+  "devDependencies": {
+    "eslint": "^8.57.0",
+    "eslint-config-airbnb-base": "^15.0.0",
+    "eslint-plugin-import": "^2.29.1"
   }
 }
